# Fundamental-Machine-Learning-Algorithm-Tutorial

./: .gitignore  K-Nearest Neighbors.ipynb  Linear Regression.ipynb  Logistic Regression.ipynb  README.md  ReadME.md  Singular Value Decomposition.ipynb  pyproject.toml
app/: requirements.txt
src/ml_learn/: __init__.py  layers.py
src/ml_learn/datasets/: __init__.py  reddit_comment.py
tutorials/Fundamental ML Algorithms/: K-Means Clustering.ipynb
