[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# $ pip install ml_learn
name = "ml_learn"  # Required
version = "0.1.0"  # Required
description = "A simple library of machine learning algorithms coded using numpy for learning purpose."  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["machine learning", "AI", "ML tutorial"]  # Optional
authors = [
  {name = "Jason Ki", email = "ki.jasonj@gmail.com" } # Optional
]

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "numpy",
  "sklearn"
]

[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ml_learn.datasets.data" = ["*.csv", "*.txt"]
